# libSDL2pp

./: CMakeLists.txt
cmake/: FindSDL2.cmake
